--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,10 @@
     }
   },
   "require": {
-    "php": ">=7.0",
+    "php": "^7.2",
     "illuminate/database": "~5.4",
     "illuminate/support": "~5.4",
-    "nesbot/carbon": "~1.21"
+    "nesbot/carbon": "^2.23"
   },
   "require-dev": {
     "fzaninotto/faker": "^1.4",
